# ChangeLog for app-editors/xemacs
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 May 2008; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Fix a problem caused by GCC 4.1.2 optimization.

  26 Apr 2008; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Remove older versions without the vcdiff security patch.

  13 Apr 2008; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Add security fix for insecure temporary file handling.

  26 Jan 2008; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Add information about incompatibilities with XEmacs 21.4

  10 Oct 2007; Ulrich Mueller <ulm@gentoo.org> xemacs-21.5.28.ebuild:
  Don't PROVIDE=virtual/editor as it is a new-style virtual now.
