@@ -8,4 +8,5 @@ DIST NeXT_XEmacs.tar.gz 39571 RMD160 3c2cedf75e4ece412031b20a15614a78367393f4 SH
 DIST xemacs-21.5.28.tar.gz 15310202 RMD160 a225a2da39c22dccbc5d14399d40dadecead5e11 SHA1 6de5f4b4cecac0480dd9ff50170a72f23f36dbac SHA256 588a3970ee44426975cd86026a932ed0e2cf47f597ebcf76d376bbd18638eae2
 EBUILD xemacs-21.5.28-r2.ebuild 7386 RMD160 411544516e4755156719f5a4b2697268d09ac257 SHA1 c46aabcc30bd69a2ba83064ca606d302a8f2ff5b SHA256 88e6d50290ddd103ca9605070a3a491ff57756ff33d933a1af724188e0b72566
 EBUILD xemacs-21.5.28-r3.ebuild 7649 RMD160 0e1413da36c50ba20d1ee1d22b4f519753fd8264 SHA1 3d4dd3f925e539f005d4bef9845121accdfb3ecd SHA256 1651863b5b7e70c713b5edfe75109eaf47ee8c115c75ba2f2713eb4fe5f758b4
-MISC ChangeLog 728 RMD160 38b87b33ed9a38c2916cb422eca645ac0ac53968 SHA1 148b744f2be20f56c8c4a7c2b5483f961f04f458 SHA256 621ba3a4a6de1094ee81ad990831fc99597bb5e02875703d4599ddc0b69506ad
+EBUILD xemacs-21.5.28-r4.ebuild 7070 RMD160 62c065b5c903a89b21ec7f2cb0c8116a159c0dc8 SHA1 0b5a29f3470bb3e8afc103b24f92815b6309eba3 SHA256 28378ad056080db5924b7abd6fcb32191096976a93399ae19c735970cce4d704
+MISC ChangeLog 1143 RMD160 e604193ecb2c18bbd3ce98df86b006a5c18a7cae SHA1 24056ae41b0b3653c32c17a7edce387a13900550 SHA256 72fd08ae22d8ef5598802ed7deda19b818a7278d2d1673655f9c5f1f9ca37fb7
